--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,5 +15,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1"
+  },
+  "engines": {
+    "node": "18.18.0",
+    "npm": "10.2.4"
   }
 }
