--- a/Admin/package.json
+++ b/Admin/package.json
@@ -1,6 +1,7 @@
 {
   "name": "admin",
   "private": true,
+  "homepage": ".",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -10,7 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cli": "^1.0.1",
     "cors": "^2.8.5",
+    "netlify": "^13.1.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
