--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,6 +2,7 @@
   "name": "event-management-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
@@ -13,6 +14,8 @@
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "cli": "^1.0.1",
+    "netlify": "^13.1.14",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
