--- a/Admin/package.json
+++ b/Admin/package.json
@@ -11,12 +11,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@netlify/functions": "^3.0.0",
+    "@types/express": "^5.0.0",
     "cli": "^1.0.1",
     "cors": "^2.8.5",
+    "express": "^4.21.2",
     "netlify": "^13.1.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
